--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "entregavel03",
+  "name": "falcon-sprint1-ms",
   "version": "1.0.0",
-  "description": "checkpoint 02 microservice",
+  "description": "Sprint 1 - Falcon - MicroServices",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
