--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 PORT=3000
-MONGO_URI=mongodb+srv://pedrozhfs:28012002Pedro@cluster0.nzlnyjb.mongodb.net/ProdutoDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://username:password@cluster0.jkbp3mz.mongodb.net/produto?retryWrites=true&w=majority
 SMTP_MAIL_HOST=smtp.gmail.com
 SMTP_MAIL_PORT=587
-SMTP_MAIL_USERNAME=pedrinho020202@gmail.com
-SMTP_MAIL_PASSWORD=zwilucsaiwqowypf
+SMTP_MAIL_USERNAME=
+SMTP_MAIL_PASSWORD=
 SMTP_MAIL_PORT_PROPERTIES_MAIL_SMTP_AUTH=true
 SMTP_MAIL_PORT_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=true
